--- a/HTML Portfolio/styles.css
+++ b/HTML Portfolio/styles.css
@@ -25,14 +25,13 @@ body {
 }
 
 .sidebar li {
-    display: flex;
     padding: 20px;
-    transition: 0.3s;
 }
 
 .sidebar li:hover {
     padding-right: 0;
     background-color: #F96D00;
+    transition-delay: 5ms;
 }
 
 .sidebar a {
