--- a/JS Calculator Assignment/styles.css
+++ b/JS Calculator Assignment/styles.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
 * {
     box-sizing: border-box;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 body {
@@ -16,7 +19,7 @@ body {
 }
 
 #display {
-    border-radius: 3%;
+    border-radius: 5px;
     width: 100%;
     text-align: right;
     height: 70px;
@@ -24,7 +27,7 @@ body {
     padding: 10px 8px;
     font-size: 25px;
     background-color: #F2F2F2;
-    margin: 0 0 2px 2px;
+    margin: 0 auto 5px auto;
 }
 
 .buttons {
